Fix picking with Custom Geometry

This adds the big of extra checks needed to pick Models
that have custom geometry instead of a static mesh source.

Picking also requires that custom geometry sets correct bounding values
since the first pass will always do checking agains the AABB before
using the more detailed BVH pass.

Fixes: QTBUG-89385
Pick-to: 6.0
Change-Id: Ic24459d2a319e43cedcc0d0298d23a63a07e914c
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>